# Video-Synopsis

./: README.md  cli.py  requirements.txt  setup.cfg
notebooks/: 1. Bounding Box Tagging.ipynb  2. Extract Patches and Background.ipynb  3. Tube Rearrangement.ipynb  4. Video Synopsis generation.ipynb  5. Video Synopsis on synthetic data.ipynb  6. Video Synopsis on synthetic dataset.ipynb  Object Tracking.ipynb  README.md  remove_background.py
notebooks/.ipynb_checkpoints/: Graph Collision Video Synopsis-checkpoint.ipynb
notebooks/data/: a.txt  adjacency_matrix.txt  highway.txt  overlap_frame.txt  test2.txt  trungquoc.txt  video-1-raw.txt  video-1-synopsis.csv  video-2-raw.txt  video-2-synopsis.csv
notebooks/data-simulation/: metrics.json  tracking_20220423_213244.csv  tracking_20220523_210923.csv
notebooks/pcgvs/Overlap/: collision.py
notebooks/pcgvs/aggregation/: __init__.py  coloring.py  relations.py
notebooks/pcgvs/extraction/: __init__.py  track.py
notebooks/pcgvs/metrics/: __init__.py
notebooks/pcgvs/notes/: Graph Collision Video Synopsis.ipynb  Synopsis generation and Interpolation.ipynb
notebooks/pcgvs/synopsis/: __init__.py
notebooks/src/pcgvs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
samples/: extract_background.py  extract_sub_images_from_extracted_tubes.py  extract_tubes.py  graph_coloring_from_extracted_tubes.py  resize.py
src/pcgvs.egg-info/: requires.txt
src/pcgvs/aggregation/: coloring.py  graph.py  relations.py
src/pcgvs/extraction/: __init__.py  preprocessing.py  track.py
src/pcgvs/synopsis/: __init__.py  (+1 more)
(+42 files in other folders)
