[metadata]
name = pcgvs
description = Potential collision graph based video synopsis.
author = Luigi Seminara, Lemuel Puglisi
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pcgvs
install_requires =
    matplotlib>=3.2.2
    numpy>=1.18.5
    opencv-python>=4.1.2
    Pillow>=7.1.2
    PyYAML>=5.3.1
    requests>=2.23.0
    scipy>=1.4.1
    torch>=1.7.0
    torchvision>=0.8.1
    tqdm>=4.41.0
    protobuf<=3.20.1
    networkx
    click
    pandas>=1.1.4
    seaborn>=0.11.0
    easydict
    Cython
    h5py
    six
    tb-nightly
    future
    yacs
    gdown
    flake8
    yapf
    isort==4.3.21
    imageio
    yolov5


python_requires = >= 3.6
package_dir = 
    =src
zip_safe = no
